# DegScore

./: pyproject.toml
src/degscore/: DegScore.py  __init__.py
